@@ -1,3 +1,8 @@
+2013-10-16  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/58633
+	* parser.c (cp_parser_pseudo_destructor_name): Revert r174385 changes.
+
 2013-10-16  Jason Merrill  <jason@redhat.com>
 
 	PR c++/57850
